--- a/client/src/i18n/fil.json
+++ b/client/src/i18n/fil.json
@@ -12,6 +12,9 @@
   "12": {
     "01": "01"
   },
+  "16": {
+    "65": "65"
+  },
   "common": {
     "language": "Wika",
     "wallet": "Wallet",
@@ -80,8 +83,6 @@
     "selectOfferType": "Piliin ang uri ng alok",
     "buy": "Bumili",
     "sell": "Magbenta",
-    "depositOffer": "Alok na Deposito",
-    "withdrawOffer": "Alok na Pag-withdraw",
     "bankAccount": "Account sa Bangko",
     "bankAccountRequired": "Kailangan ang account sa bangko para sa mga alok na pagbebenta",
     "bankDetailsRequired": "Kailangan ang mga detalye ng account sa bangko para sa mga alok na pagbebenta",
@@ -142,13 +143,13 @@
     "fetchOfferFailed": "Hindi makuha ang mga detalye ng alok",
     "offerNotFound": "Hindi nahanap ang alok",
     "invalidOfferData": "Hindi wastong datos ng alok ang natanggap",
-    "mintFiat": {
-      "title": "Mag-mint ng Fiat",
-      "createTitle": "Mag-mint ng Bagong Fiat",
-      "listTitle": "Listahan ng Fiat Mint",
-      "create": "Mag-mint ng Fiat",
-      "creating": "Nagmi-mint...",
-      "detail": "Detalye ng Fiat Mint",
+    "escrows": {
+      "title": "Pamamahala ng Escrow",
+      "createTitle": "Lumikha ng Bagong Escrow",
+      "listTitle": "Listahan ng Escrow",
+      "create": "Lumikha ng Escrow",
+      "creating": "Lumilikha...",
+      "detail": "Detalye ng Escrow",
       "usdt": "USDT",
       "fiatAmount": "Halaga ng Fiat",
       "fiatCurrency": "Fiat Currency",
@@ -167,27 +168,27 @@
       "actions": "Mga Aksyon",
       "cancel": "Kanselahin",
       "viewDetail": "Tingnan ang Detalye",
-      "noMints": "Walang nahanap na fiat mints.",
+      "noEscrows": "Walang nahanap na escrow",
       "loading": "Naglo-load...",
       "currentRates": "Kasalukuyang Rate",
       "usdtAmount": "Halaga ng USDT",
       "usdtAmountPlaceholder": "Ilagay ang halaga ng USDT",
-      "createSuccess": "Matagumpay na na-mint ang Fiat!",
-      "fetchError": "Error sa pagkuha ng mga fiat mint",
+      "createSuccess": "Matagumpay na nalikha ang escrow!",
+      "fetchError": "Error sa pagkuha ng escrows",
       "validationError": "Mangyaring punan ang lahat ng kinakailangang field",
-      "createError": "Error sa pag-mint ng fiat",
+      "createError": "Error sa paglikha ng escrow",
       "insufficientBalance": "Hindi sapat ang balanse ng USDT",
-      "cancelSuccess": "Matagumpay na nakansela ang fiat mint",
-      "cancelError": "Error sa pagkansela ng fiat mint",
+      "cancelSuccess": "Matagumpay na nakansela ang escrow",
+      "cancelError": "Error sa pagkansela ng escrow",
       "estimatedFiatAmount": "Tinatayang halaga ng fiat",
-      "creationSuccess": "Matagumpay na na-mint ang Fiat",
-      "creationError": "Hindi ma-mint ang fiat",
-      "cancellationSuccess": "Matagumpay na na-cancel ang fiat mint",
-      "cancellationError": "Hindi ma-cancel ang fiat mint",
+      "creationSuccess": "Matagumpay na nalikha ang escrow",
+      "creationError": "Hindi malikha ang escrow",
+      "cancellationSuccess": "Matagumpay na na-cancel ang escrow",
+      "cancellationError": "Hindi ma-cancel ang escrow",
       "id": "ID",
       "fiatAmountLabel": "Halaga ng Fiat",
       "statusHeader": "Katayuan",
-      "confirmCreate": "Mag-mint ng Fiat para sa",
+      "confirmCreate": "Lumikha ng Escrow para sa",
       "error": "Error",
       "currentBalance": "Kasalukuyang Balanse"
     },
@@ -428,7 +429,8 @@
     "paymentSettings": "Mga Setting ng Pagbabayad",
     "bankAccountDescription": "Pumili ng account sa bangko para sa pagtanggap ng mga bayad",
     "availableBalance": "Available na balanse",
-    "cancel": "Cancel"
+    "cancel": "Kanselahin",
+    "mintFiat": "Mint Fiat"
   },
   "customer": {
     "marketplace": "Pamilihan",
@@ -822,10 +824,11 @@
   },
   "withdraw": {
     "title": "Mag-withdraw ng {currency}",
-    "balance": "Balanse",
+    "balance": "Balance",
     "amountToWithdraw": "Halaga na Iwi-withdraw",
     "amountToReceive": "Halaga na Matatanggap",
     "fee": "Bayad",
+    "feeDisplay": "Bayad: {percentage}% + {fixed} {currency}",
     "youWillWithdraw": "Iwi-withdraw mo: {amount} {currency}",
     "youWillReceive": "Matatanggap mo: {amount} {currency}",
     "switchTo": "Lumipat sa {type} na halaga",
@@ -836,14 +839,15 @@
     "withdraw": "Mag-withdraw",
     "noOffersAvailable": "Walang available na alok para sa halagang ito",
     "back": "Bumalik",
+    "amount": "Halaga",
     "withdrawalAccount": "Account ng Pag-withdraw",
     "missingBankAccount": "Nawawalang Bank Account",
     "pleaseSelectBankAccount": "Mangyaring pumili ng bank account para sa pag-withdraw",
     "missingAmount": "Nawawalang Halaga",
     "pleaseEnterAmount": "Mangyaring ilagay ang halaga na iwi-withdraw",
-    "errorFetchingOffers": "Error sa Pagkuha ng mga Alok",
-    "feeDisplay": "Bayad: {percentage}% + {fixed} {currency}",
-    "amount": "Halaga",
+    "loading": "Naglo-load",
+    "errorCreatingWithdrawal": "Error sa Paggawa ng Pag-withdraw",
+    "somethingWentWrong": "May nangyaring mali. Mangyaring subukan muli mamaya.",
     "enterAmount": "Maglagay ng halaga",
     "youWillGet": "Makukuha mo: {amount}",
     "withdrawalAddress": "Address ng Pag-withdraw",
@@ -851,7 +855,7 @@
     "withdrawalNetwork": "Network ng Pag-withdraw",
     "selectNetwork": "Pumili ng network",
     "withdrawalSuccessful": "Matagumpay ang Pag-withdraw",
-    "withdrawalInitiated": "Nasimulan na ang iyong pag-withdraw",
+    "withdrawalInitiated": "Nasimulan na ang inyong pag-withdraw",
     "viewStatus": "Tingnan ang Status",
     "withdrawalFailed": "Hindi Nagtagumpay ang Pag-withdraw",
     "withdrawalDetails": "Mga Detalye ng Pag-withdraw",
@@ -863,21 +867,106 @@
     "viewOnExplorer": "Tingnan sa Explorer",
     "confirmWithdrawal": "Kumpirmahin ang Pag-withdraw",
     "reviewDetails": "Mangyaring suriin ang mga detalye ng pag-withdraw",
-    "withdrawalWarning": "Mangyaring tiyakin na tama ang iyong withdrawal address. Ang mga pag-withdraw na ipinadala sa maling address ay hindi na mababawi.",
+    "withdrawalWarning": "Mangyaring tiyakin na tama ang inyong withdrawal address. Ang mga pag-withdraw na ipinadala sa maling address ay hindi na mababawi.",
     "withdrawButton": "Mag-withdraw Ngayon",
-    "insufficientBalance": "Hindi sapat na balanse",
+    "insufficientBalance": "Hindi sapat na balance",
     "min": "Minimum: {amount}",
     "max": "Maximum: {amount}",
-    "loading": "Naglo-load",
-    "errorCreatingWithdrawal": "Error sa Paggawa ng Pag-withdraw",
-    "somethingWentWrong": "May nangyaring mali. Mangyaring subukan muli mamaya.",
-    "insufficientBalanceDescription": "Hindi sapat na balanse. Mag-deposit ng {amount} {currency} para mag-withdraw.",
+    "errorFetchingOffers": "Error sa Pagkuha ng mga Alok",
+    "insufficientBalanceDescription": "Hindi sapat na balance. Mayroon kang {available} {currency} na available.",
     "withdrawDisabled": "Hindi Pinagana ang Pag-withdraw",
     "withdrawDisabledDescription": "Ang pag-withdraw ay kasalukuyang hindi pinagana para sa coin na ito",
     "noOffersForCurrency": "Walang alok para sa currency na ito",
     "noOffersForCurrencyDescription": "Walang merchant na nag-aalok ng {currency} na tumugma sa inyong halaga ng pag-withdraw. Pakisubukang gumamit ng ibang halaga o subukan muli mamaya.",
     "amountTooLow": "Masyadong mababang halaga",
-    "amountTooLowDescription": "Ang minimum na halaga para mag-withdraw ay {min} {currency}."
+    "amountTooLowDescription": "Ang minimum na halaga para mag-withdraw ay {min} {currency}.",
+    "twoFactorRequired": "🔐 Kailangan ng 2-Factor Authentication para sa transaksyon na ito",
+    "twoFactorInvalidCode": "Hindi tama ang 2FA code. Mangyaring subukan muli.",
+    "twoFactorNoData": "Walang withdrawal data na maproproseso",
+    "twoFactorAuth": {
+      "title": "2-Factor Authentication",
+      "description": "Mangyaring ilagay ang 6-digit code mula sa inyong authenticator app para magpatuloy.",
+      "submitText": "I-authenticate",
+      "alertDescription": "Buksan ang Google Authenticator o katulad na app para makuha ang 6-digit code.",
+      "codeLabel": "Authentication Code",
+      "codePlaceholder": "123456",
+      "codeHelper": "Ilagay ang 6-digit code mula sa authenticator app",
+      "cancel": "Kanselahin",
+      "authenticating": "Nag-a-authenticate...",
+      "invalidCodeLength": "Mangyaring maglagay ng 6-digit code",
+      "genericError": "May naganap na error",
+      "deviceNotTrusted": "Ang device na ito ay hindi pa trusted. Kailangan ng 2FA verification para sa transaction na ito.",
+      "trustDevice": "I-trust ang device na ito (laktawan ang 2FA)",
+      "setup": {
+        "title": "I-setup ang Two-Factor Authentication",
+        "step1Title": "Step 1/2: I-scan ang QR Code",
+        "step1Description": "Gamitin ang Google Authenticator o katulad na authenticator app para i-scan ang QR code sa ibaba:",
+        "step1ManualEntry": "O manual na i-enter ang secret key:",
+        "step1Continue": "Magpatuloy",
+        "cancel": "I-cancel",
+        "step2Title": "Step 2/2: I-verify ang Code",
+        "step2Description": "I-enter ang 6-digit code mula sa inyong authenticator app:",
+        "codeLabel": "Verification Code",
+        "codePlaceholder": "123456",
+        "backButton": "Bumalik",
+        "verifyButton": "I-verify",
+        "verifying": "Nag-ve-verify...",
+        "successTitle": "Success!",
+        "successDescription": "Na-enable na ang two-factor authentication para sa inyong account.",
+        "backToProfile": "Bumalik sa Profile",
+        "copied": "Na-copy na",
+        "copiedDescription": "Na-copy na ang secret key sa clipboard",
+        "invalidCodeLength": "Mag-enter ng 6-digit code",
+        "initializationError": "May error sa pag-initialize ng 2FA",
+        "verificationError": "Invalid verification code"
+      }
+    },
+    "usdt": {
+      "title": "Mag-withdraw ng USDT",
+      "description": "Mag-withdraw ng USDT sa external wallet o maglipat sa ibang user",
+      "withdrawalDetails": "Mga Detalye ng Pag-withdraw",
+      "chooseTypeAndDestination": "Piliin ang uri ng pag-withdraw at destinasyon",
+      "onChainWithdrawal": "On-chain Withdrawal",
+      "internalTransfer": "Internal Transfer",
+      "network": "Network",
+      "selectNetwork": "Pumili ng network",
+      "destinationAddress": "Destination Address",
+      "enterAddress": "Ilagay ang {network} address",
+      "selectNetworkFirst": "Mangyaring pumili muna ng network",
+      "networkFee": "Network Fee: {fee} USDT",
+      "availableBalance": "Available Balance: {balance} USDT",
+      "totalAmount": "Kabuuang Halaga: {amount} USDT",
+      "recipientUsername": "Username ng Tatanggap",
+      "enterUsername": "Ilagay ang username",
+      "usernameExample": "Halimbawa: johndoe123",
+      "validatingUsername": "Nag-va-validate ng username...",
+      "amount": "Halaga (USDT)",
+      "enterAmount": "Ilagay ang halaga",
+      "networkDisabled": "(Network hindi available)",
+      "minWithdrawal": "Minimum withdrawal: 2 USDT",
+      "onlyWithdrawToNetwork": "Mag-withdraw lang sa {network} network addresses",
+      "minTransfer": "Minimum transfer: 2 USDT",
+      "noNetworkFees": "Walang network fees para sa internal transfers",
+      "instantTransfers": "Instant transfers sa pagitan ng platform users",
+      "withdrawAmount": "Halaga ng Pag-withdraw",
+      "transferAmount": "Halaga ng Transfer",
+      "processing": "Nagpo-proseso...",
+      "withdrawalRequestSuccess": "Matagumpay na naipadala ang withdrawal request",
+      "internalTransferSuccess": "Matagumpay na naipadala ang internal transfer",
+      "confirmWithdrawal": "Kumpirmahin ang Pag-withdraw",
+      "confirmInternalTransfer": "Kumpirmahin ang Internal Transfer",
+      "transactionDetails": "Mga Detalye ng Transaksyon",
+      "recipient": "Tatanggap",
+      "fee": "Bayad",
+      "total": "Kabuuan",
+      "cancel": "Kanselahin",
+      "confirm": "Kumpirmahin",
+      "twoFactorDialog": {
+        "title": "I-authenticate ang withdrawal",
+        "description": "Para sa security ng account, mangyaring ilagay ang 2FA code para makumpleto ang withdrawal transaction.",
+        "submitText": "Kumpirmahin ang Withdrawal"
+      }
+    }
   },
   "transactions": {
     "myTradingHistory": "Aking Kasaysayan ng Pangangalakal",
@@ -1359,5 +1448,31 @@
     "invalidInfo": "InvalidInfo"
   },
   "confirmRelease": "Kumpirmahin ang Pag-release",
-  "disputeResolution": "Resolusyon ng Dispute"
+  "disputeResolution": "Resolusyon ng Dispute",
+  "errorFileTooLarge": "File Too Large",
+  "errorInvalidFileType": "Invalid File Type",
+  "twoFactorAuth": {
+    "deviceNotTrusted": "DeviceNotTrusted"
+  },
+  "twoFactorDialog": {
+    "title": "Title",
+    "description": "Description",
+    "submitText": "SubmitText"
+  },
+  "api": {
+    "vietqr": {
+      "io": "Io"
+    }
+  },
+  "vietqr": {
+    "net": "Net"
+  },
+  "backend": {
+    "snow": {
+      "exchange": "Exchange"
+    }
+  },
+  "radix": {
+    "slottable": "Slottable"
+  }
 }
