Enhance swap functionality by adding a "Max" button to the amount input, allowing users to quickly select their maximum token balance. Update swap calculations to support exact output mode and improve liquidity calculations. Add pool fee display in the swap summary. Update translations for new UI elements.

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -515,6 +515,7 @@
     "outputAmount": "You receive",
     "exchangeRate": "Exchange Rate",
     "priceImpact": "Price Impact",
+    "poolFee": "Pool Fee",
     "balance": "Balance",
     "loading": "Loading pools...",
     "error": "Failed to load pools",
