Refactor withdrawal logic to use a constant for minimum withdrawal amount. Update relevant components and translations to reflect dynamic minimum withdrawal values in error messages.

--- a/client/src/i18n/fil.json
+++ b/client/src/i18n/fil.json
@@ -943,9 +943,9 @@
       "amount": "Halaga (USDT)",
       "enterAmount": "Ilagay ang halaga",
       "networkDisabled": "(Network hindi available)",
-      "minWithdrawal": "Minimum withdrawal: 2 USDT",
+      "minWithdrawal": "Minimum withdrawal: {amount} USDT",
       "onlyWithdrawToNetwork": "Mag-withdraw lang sa {network} network addresses",
-      "minTransfer": "Minimum transfer: 2 USDT",
+      "minTransfer": "Minimum transfer: {amount} USDT",
       "noNetworkFees": "Walang network fees para sa internal transfers",
       "instantTransfers": "Instant transfers sa pagitan ng platform users",
       "withdrawAmount": "Halaga ng Pag-withdraw",
