Implement confirmation dialog for closing positions in PositionDetail component
- Added ConfirmCloseDialog component to handle position closure confirmation.
- Updated PositionDetail to manage dialog state and handle close position actions.
- Modified translations for "Close" to "Close Position" in English and Filipino language files.
- Enhanced unit tests to cover confirmation dialog interactions for closing positions.

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -993,7 +993,7 @@
     "cancel": "Cancel",
     "confirmCloseDescription": "Are you sure you want to close your position?",
     "yourStake": "Your Stake",
-    "close": "Close",
+    "close": "Close Position",
     "closeDialog": "Close",
     "confirmClose": "Confirm Close",
     "tickSpacing": "Tick Spacing",
