--- a/client/src/i18n/fil.json
+++ b/client/src/i18n/fil.json
@@ -1014,7 +1014,7 @@
     "cancel": "Kanselahin",
     "confirmCloseDescription": "Sigurado ka bang gusto mong isara ang iyong posisyon?",
     "yourStake": "Iyong Stake",
-    "close": "Isara",
+    "close": "Isara ang Posisyon",
     "closeDialog": "Isara",
     "confirmClose": "Kumpirmahin ang Pagsara",
     "tickSpacing": "Tick Spacing",
